adjust layout to fix booking page and the alignment of the header in a small screen

--- a/_includes/assets/css/inline.css
+++ b/_includes/assets/css/inline.css
@@ -147,6 +147,11 @@ h1 a, h1 a:visited {
 h1 a:hover {
 	color: var(--cool-blue-2);
 }
+@media screen and (max-width: 480px) {
+	h1 {
+		margin: 0 1rem;
+	}
+}
 h2, .h2 {
 	--text-opsz: 18;
 	--text-wght: 600;
@@ -195,7 +200,7 @@ h2, .h2 {
 		} 
 	}
 
-p {
+p, ul {
 	--text-opsz: 16;
 	--text-width: calc( var(--p-vf-wdth) * .9 );
 	font-size: calc( var(--p-size-min) * 1em);
@@ -211,19 +216,19 @@ p {
 	max-width: 48rem;
 	transition: font-size 0.5s ease-in-out, color 0.5s ease-in-out, letter-spacing 0.5s ease-in-out, word-spacing 0.5s ease-in-out, line-height 0.5s ease-in-out; }
 	@media screen and (min-width: 25em) {
-	  p {
+	  p, ul {
 		line-height: calc(( var(--p-lh-min) * 1em ) + ( var(--p-lh-max) - var(--p-lh-min) ) * ((100vw - ( var(--bp-small) * 1em )) / ( var(--bp-xlarge) - var(--bp-small) )));
 		font-size: calc(( var(--p-size-min) * 1em ) + ( var(--p-size-max) - var(--p-size-min) ) * ((100vw - ( var(--bp-small) * 1em )) / ( var(--bp-xlarge) - var(--bp-small) ))); } }
 	@media screen and (min-width: 45em) {
-	  p {
+	  p, ul {
 		--text-opsz: 18;
 		font-stretch: calc( var(--p-wdth-mid) * 1%);
 		max-width: 48rem; } }
 	@media screen and (min-width: 55em) {
-	  p {
+	  p, ul {
 		max-width: 48rem; } }
 	@media (min-width: 65em) {
-	  p {
+	  p, ul{
 		--text-opsz: 20;
 		font-size: calc( var(--p-size-max) * 1em);
 		font-stretch: calc( var(--p-wdth-max) * 1%);
@@ -243,7 +248,7 @@ ul {
 		list-style-image: url(#);
 		max-width: 48rem;
 		margin: 0 auto;
-		font-size: calc( var(--p-size-min) * 1em);
+		/* font-size: calc( var(--p-size-min) * 1em); */
 	}
 
 .hero-text {
@@ -349,7 +354,7 @@ ul {
 @media screen and (max-width: 480px) {
 	.about-image-section {
 		grid-template-columns: 1fr;
-		grid-template-rows: 1fr 1fr;
+		/* grid-template-rows: 1fr 1fr; */
 		margin: 0 1rem;
 	}
 }
@@ -384,6 +389,13 @@ header {
 	header {
 		flex-flow: column nowrap;
 		justify-content: center;
+	}
+	header a, header nav {
+		display: flex;
+		justify-content: center;
+	}
+	header nav ul, header nav ul li:first-child {
+		padding-left: 0px;
 	}
 }
 footer {
@@ -478,7 +490,7 @@ img.logo {
 }
 
 section {
-	max-width: 48rem;
+	/* max-width: 48rem; */
 	/* margin: 0 auto; */
 }
 
